Fixing mistake on test exercises

--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
         ]
       },
       {
-        id: 1,
+        id: 2,
         title: "Sum of Two Numbers",
-        description: "Write a function <code>sum(a, b)</code> that returns the sum of two numbers.",
-        starter: "function sum(a, b) {\n  // Your code here\n  return a - b;\n}",
-        functionName: "sum",
+        description: "Write a function <code>sub(a, b)</code> that returns the subtraction of two numbers.",
+        starter: "function sub(a, b) {\n  // Your code here\n  return a - b;\n}",
+        functionName: "sub",
         tests: [
           { input: [2, 3], expected: -1 },
           { input: [-1, 5], expected: -6 }
         ]
       },
       {
-        id: 2,
+        id: 3,
         title: "Return the First Element",
         description: "Write a function <code>getFirst(arr)</code> that returns the first element of an array.",
         starter: "function getFirst(arr) {\n  // Your code here\n  return arr[0];\n}",
@@ -144,7 +144,7 @@
         ]
       },
       {
-        id: 3,
+        id: 4,
         title: "Reverse a String",
         description: "Write a function <code>reverseString(str)</code> that returns the reversed string.",
         starter: "function reverseString(str) {\n  // Your code here\n  return str.split('').reverse().join('');\n}",
