--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
       {
         id: 3,
         title: "Check the Temperature",
-        description: "Write a function <code>checktemp(temp)</code> that when given a variable <code>temp</code>, returns <code>false</code> if the temperature is either more than 80, or either equal to or less than 70, otherwise it should return <code>true</code>.<br><br> This exercise is all about proper use of conditionals and logical comparison.<br><br>In use here: <br>Conditionals: if, else if, else <br>Comparison Operators: ==, <, <=<br><br>Example: <code>checktemp(90)</code> -> Output: false",
-        starter: "function checktemp(temp) {\n  // Your code in the line below\n  \n}",
-        functionName: "checktemp",
+        description: "Write a function <code>check_temp(temp)</code> that when given a variable <code>temp</code>, returns <code>false</code> if the temperature is either more than 80, or either equal to or less than 70, otherwise it should return <code>true</code>.<br><br> This exercise is all about proper use of conditionals and logical comparison.<br><br>In use here: <br>Conditionals: if, else if, else <br>Comparison Operators: ==, <, <=<br><br>Example: <code>checktemp(90)</code> -> Output: false",
+        starter: "function check_temp(temp) {\n  // Your code in the line below\n  \n}",
+        functionName: "check_temp",
         tests: [
           { input: [81], expected: false },
           { input: [70], expected: false },
@@ -151,7 +151,7 @@
       {
         id: 4,
         title: "Sum from 1 to N",
-        description: "Write a function <code>triangular(n)</code> that when given a variable <code>n</code>, returns the sum of the numbers from 1 to <code>n</code>.<br><br>You are going to need to use a loop for this one. If you remember, inside of a loop we have the line <code>let i = 0</code>, this <code>i</code> counts how many loops are made, you can use that to get the sum from 1 to <code>n</code>.<br><br>In use here: <br>Loops: for(let i = 0; i < [number of loops you want]; i++) {}<br>Variable Assignment: =<br>Math Operators: +, -, *, /<br><br>Example: <code>triangular(3)</code> -> Output: 6",        starter: "function reverseString(str) {\n  // Your code in the line below\n  \n}",
+        description: "Write a function <code>triangular(n)</code> that when given a variable <code>n</code>, returns the sum of the numbers from 1 to <code>n</code>.<br><br>You are going to need to use a loop for this one. If you remember, inside of a loop we have the line <code>let i = 0</code>, this <code>i</code> counts how many loops are made, you can use that to get the sum from 1 to <code>n</code>.<br><br>In use here: <br>Loops: for(let i = 0; i < [number of loops you want]; i++) {}<br>Variable Assignment: =<br>Math Operators: +, -, *, /<br><br>Example: <code>triangular(3)</code> -> Output: 6",
         starter: "function triangular(n) {\n  // Your code in the line below\n  \n}",
         functionName: "triangular",
         tests: [
